# solana-onchain-mcp

./: .editorconfig  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  USAGE.md  install.sh  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
src/: config.rs  error.rs  handler.rs  keypair.rs  lib.rs  logging.rs  main.rs  utils.rs
tests/: integration.rs  tx_inspector_tests.rs
todos/: 001-resolved-p1-get-program-accounts-unbounded-memory.md  002-resolved-p1-serialize-pretty-performance.md  003-resolved-p1-missing-transaction-building.md  004-resolved-p1-ata-creation-missing.md  005-resolved-p2-transaction-size-validation.md  006-resolved-p2-rpc-error-sanitization.md  007-resolved-p2-unused-commitment-param.md  008-resolved-p2-encoding-validation.md  009-pending-p2-signature-status-tool.md  010-pending-p2-error-recovery-guidance.md  011-pending-p3-dry-serialization-helper.md  012-pending-p3-consistent-derive-formatting.md  013-pending-p3-magic-numbers-constants.md  014-pending-p2-dead-code-annotations.md  015-pending-p2-async-read-methods.md  016-pending-p2-client-limit-validation.md  017-pending-p3-account-serialization-helper.md  018-pending-p3-pubkey-trait-extension.md  019-pending-p3-tool-result-helpers.md  020-pending-p1-program-accounts-prefetch-limit.md  021-pending-p1-json-to-text-panic-risk.md  022-pending-p1-missing-ata-creation-tool.md  023-pending-p2-sanitization-patterns-too-broad.md  024-pending-p2-silent-encoding-default.md  025-pending-p2-confirm-transaction-tool.md  (+4 more)
(+31 files in other folders)
