[package]
name = "solana-onchain-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP for Solana On-Chain activities"
authors = ["widnyana <wid@widnyana.web.id>"]

[lib]
name = "solana_onchain_mcp"
path = "src/lib.rs"

[dependencies]
rust-mcp-sdk = { version = "0.8.3", features = ["macros", "hyper-server", "streamable-http"] }
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
solana-account-decoder = "2.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
clap = { version = "4", features = ["derive"] }
spl-token = "7.0"
spl-associated-token-account = "6.0"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "unwind"
strip = false
